OctaviLab: Allow using 4G icon instead LTE [2/2]
Change-Id: Ib5ceb5537e2eff1450e9c80316d9e304b61225e5
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -89,4 +89,9 @@
     <string name="doze_double_tap_title">Double tap to check phone</string>
     <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
 
+    <!-- Show LTE/4G switch -->
+    <string name="icons_category">Icons</string>
+    <string name="show_fourg_icon_title">Show 4G instead of LTE</string>
+    <string name="show_fourg_icon_summary">Replace LTE indicator with 4G</string>
+
 </resources>
