--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -57,4 +57,9 @@
     <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
     <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
 
+    <!--Double Tap to Sleep -->
+    <string name="double_tap_gestures_category_title">Double tap gestures</string>
+    <string name="double_tap_sleep_gesture_title">Double tap to sleep on status bar</string>
+    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
+
 </resources>
