--- a/res/drawable/option_border_custom.xml
+++ b/res/drawable/option_border_custom.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2021 Octavi-OS
+<?xml version="1.0" encoding="utf-8"?><!--
+     Copyright (C) 2019 The Android Open Source Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -10,14 +10,13 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-
-
-   <style name="OptionTitleTextAppearance" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title">
-        <item name="android:textAlignment">center</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:lineHeight">15sp</item>
-    </style>
-
-</resources>
-
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        android:color="?android:attr/colorControlHighlight">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white"/>
+            <corners android:radius="?android:dialogCornerRadius" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/option_border_edge_custom" />
+</ripple>
