--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -53,4 +53,8 @@
     <string name="gaming_title">Gaming Mode</string>
     <string name="misc_title">Miscellaneous</string>
 
+    <!-- Annoying Notifications -->
+    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
+    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
+
 </resources>
