--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -131,4 +131,19 @@
     <string name="qs_auto_brightness_title">Auto brightness icon</string>
     <string name="qs_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
 
+    <!-- Power Menu -->
+    <string name="power_menu_title">Power menu</string>
+    <string name="global_actions_title">Power menu items</string>
+    <string name="global_actions_screenshot">Screenshot</string>
+    <string name="global_actions_power">Power</string>
+    <string name="global_actions_advanced">Advanced reboot options</string>
+    <string name="global_actions_restart">Restart</string>
+    <string name="global_actions_airplane">Airplane</string>
+    <string name="global_actions_settings">Settings</string>
+    <string name="global_actions_lockdown">Lockdown</string>
+    <string name="global_actions_users">Users</string>
+    <string name="global_actions_logout">Logout</string>
+    <string name="global_actions_emergency">Emergency</string>
+    <string name="global_actions_device_controls">Device controls</string>
+
 </resources>
