--- a/res/xml/octavi_lab_power.xml
+++ b/res/xml/octavi_lab_power.xml
@@ -18,4 +18,59 @@
     android:title="@string/power_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:title="@string/global_actions_title">
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_power"
+            android:title="@string/global_actions_power"
+            android:defaultValue="true" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_restart"
+            android:title="@string/global_actions_restart"
+            android:defaultValue="true" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_advanced"
+            android:title="@string/global_actions_advanced"
+            android:defaultValue="true" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_screenshot"
+            android:title="@string/global_actions_screenshot"
+            android:defaultValue="true" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_settings"
+            android:title="@string/global_actions_settings"
+            android:defaultValue="false" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_lockdown"
+            android:title="@string/global_actions_lockdown"
+            android:defaultValue="true" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_emergency"
+            android:title="@string/global_actions_emergency"
+            android:defaultValue="true" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_device_controls"
+            android:title="@string/global_actions_device_controls"
+            android:defaultValue="false" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_users"
+            android:title="@string/global_actions_users"
+            android:defaultValue="false" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="global_actions_logout"
+            android:title="@string/global_actions_logout"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
