--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -94,4 +94,8 @@
     <string name="show_fourg_icon_title">Show 4G instead of LTE</string>
     <string name="show_fourg_icon_summary">Replace LTE indicator with 4G</string>
 
+    <!-- Status bar - icon blocklist -->
+    <string name="status_bar_icons_title">Status bar icons</string>
+    <string name="status_bar_icons_summary">Choose which status bar icons can be shown</string>
+
 </resources>
