OctaviLab: Add option to display data disabled icon [2/2]

--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -98,4 +98,8 @@
     <string name="status_bar_icons_title">Status bar icons</string>
     <string name="status_bar_icons_summary">Choose which status bar icons can be shown</string>
 
+    <!-- Data disabled icon -->
+    <string name="data_disabled_icon_title">Show data disabled icon</string>
+    <string name="data_disabled_icon_summary">Display the exclamation sign next to signal bar when data is disabled</string>
+
 </resources>
