--- a/res/xml/octavi_lab_quicksettings.xml
+++ b/res/xml/octavi_lab_quicksettings.xml
@@ -42,6 +42,29 @@
             android:summary="@string/show_squiggle_animation_summary"
             android:defaultValue="true" />
 
+        <!-- Battery styles -->
+        <com.octavi.lab.preferences.SystemSettingListPreference
+            android:key="qs_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:entries="@array/qs_battery_style_entries"
+            android:entryValues="@array/qs_battery_style_values"
+            android:defaultValue="-1" />
+
+        <!-- Battery location -->
+        <com.octavi.lab.preferences.SystemSettingListPreference
+            android:key="qs_show_battery_percent"
+            android:title="@string/status_bar_battery_percent_title"
+            android:entries="@array/status_bar_battery_percent_entries"
+            android:entryValues="@array/status_bar_battery_percent_values"
+            android:defaultValue="2" />
+
+        <!-- Battery estimate -->
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="qs_show_battery_estimate"
+            android:title="@string/battery_estimate_title"
+            android:summary="@string/battery_estimate_summary"
+            android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="quick_settings_animations"
         android:title="@string/qs_tile_animation_title"/>
