--- a/res/xml/octavi_lab_lockscreen.xml
+++ b/res/xml/octavi_lab_lockscreen.xml
@@ -48,6 +48,12 @@
         android:summary="@string/disable_fingerprint_ripple_effect_summary"
         android:defaultValue="false" />
 
+    <com.octavi.lab.preferences.SecureSettingSwitchPreference
+        android:key="secure_lockscreen_qs_disabled"
+        android:title="@string/disable_qs_title"
+        android:summary="@string/disable_qs_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="android.theme.customization.lockscreen_clock_font"
         android:title="@string/theme_customization_lock_clock_title"
