OctaviLab: add brightness slider preferences

--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -454,4 +454,11 @@
     <string name="lockscreen_shortcut_camera">Camera</string>
     <string name="lockscreen_shortcut_none">None</string>
 
+    <!-- Brightness slider -->
+    <string name="qqs_show_brightness_title">Show brightness slider in Quick QS panel</string>
+    <string name="brightness_slider_position_title">Brightness slider position</string>
+    <string name="top">Top</string>
+    <string name="bottom">Bottom</string>
+    <string name="show_auto_brightness_button_title">Show auto brightness button</string>
+
 </resources>
