--- a/res/xml/octavi_lab_quicksettings.xml
+++ b/res/xml/octavi_lab_quicksettings.xml
@@ -65,6 +65,24 @@
             android:summary="@string/battery_estimate_summary"
             android:defaultValue="false" />
 
+        <com.octavi.lab.preferences.SystemSettingListPreference
+            android:key="brightness_slider_position"
+            android:title="@string/brightness_slider_position_title"
+            android:summary="%s"
+            android:entries="@array/brightness_slider_position_entries"
+            android:entryValues="@array/brightness_slider_position_values"
+            android:defaultValue="0" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="qqs_show_brightness"
+            android:title="@string/qqs_show_brightness_title"
+            android:defaultValue="false" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="show_auto_brightness_button"
+            android:title="@string/show_auto_brightness_button_title"
+            android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="quick_settings_animations"
         android:title="@string/qs_tile_animation_title"/>
