--- a/res/xml/octavi_lab_quicksettings.xml
+++ b/res/xml/octavi_lab_quicksettings.xml
@@ -42,6 +42,12 @@
             android:summary="@string/show_squiggle_animation_summary"
             android:defaultValue="true" />
 
+    <com.octavi.support.preference.SystemSettingSwitchPreference
+            android:key="show_qs_clock"
+            android:title="@string/qs_clock_title"
+            android:summary="@string/qs_clock_summary"
+            android:defaultValue="true" />
+
     <Preference
             android:key="qs_tile_layout"
             android:title="@string/qs_tile_layout_title"
