--- a/res/xml/octavi_lab_lockscreen.xml
+++ b/res/xml/octavi_lab_lockscreen.xml
@@ -37,10 +37,10 @@
         android:defaultValue="true" />
 
     <com.octavi.lab.preferences.SystemSettingSwitchPreference
-        android:key="disable_ripple_effect"
-        android:title="@string/disable_fingerprint_ripple_effect_title"
-        android:summary="@string/disable_fingerprint_ripple_effect_summary"
-        android:defaultValue="false" />
+        android:key="enable_ripple_effect"
+        android:title="@string/enable_fingerprint_ripple_effect_title"
+        android:summary="@string/enable_fingerprint_ripple_effect_summary"
+        android:defaultValue="true" />
 
     <com.octavi.lab.preferences.SecureSettingSwitchPreference
         android:key="secure_lockscreen_qs_disabled"
