--- a/res/xml/octavi_lab_lockscreen.xml
+++ b/res/xml/octavi_lab_lockscreen.xml
@@ -48,6 +48,14 @@
         android:summary="@string/disable_qs_summary"
         android:defaultValue="false" />
 
+    <com.octavi.lab.preferences.SystemSettingListPreference
+        android:key="clock_use_custom_format"
+        android:title="@string/clock_use_single_line_title"
+        android:entries="@array/clock_use_single_line_entries"
+        android:entryValues="@array/clock_use_single_line_values"
+        android:summary="%s"
+        android:defaultValue="0" />
+
     <Preference
         android:key="android.theme.customization.lockscreen_clock_font"
         android:title="@string/theme_customization_lock_clock_title"
