OctaviLab: Import Wi-Fi standard icon [2/2]
* Show Wi-Fi 4/5/6 standard on statusbar

Co-authored-by: Col_or <col_or@qq.com>
Co-authored-by: Kujou Yuko <i@779.moe>
Change-Id: I3658cda5b303bd03cf83e174e4dfd6a55d33e860

--- a/res/xml/octavi_lab_statusbar.xml
+++ b/res/xml/octavi_lab_statusbar.xml
@@ -82,6 +82,12 @@
          android:summary="@string/statusbar_icons_style_summary"
          android:defaultValue="false" />
 
+    <com.octavi.lab.preferences.SecureSettingSwitchPreference
+         android:key="show_wifi_standard_icon"
+         android:title="@string/show_wifi_standard_icon_title"
+         android:summary="@string/show_wifi_standard_icon_summary"
+         android:defaultValue="false" />
+
     <!-- Status bar battery customizations -->
     <PreferenceCategory
         android:title="@string/status_bar_battery_category_title">
