--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -251,6 +251,8 @@
     <!-- Material dismiss all button for notifications -->
     <string name="notification_material_dismiss_title">Clear all notification button</string>
     <string name="notification_material_dismiss_summary">Replace clear all notification text with material style floating button</string>
+    <string name="clearall_style_title">Material dismiss button style</string>
+    <string name="clearall_bgstyle_title">Material dismiss background style</string>
 
     <!-- UI settings -->
     <string name="monet_title">Monet settings</string>
