--- a/res/xml/octavi_lab_quicksettings.xml
+++ b/res/xml/octavi_lab_quicksettings.xml
@@ -36,6 +36,22 @@
             android:summary="@string/notification_material_dismiss_summary"
             android:defaultValue="false" />
 
+    <com.octavi.lab.preferences.SystemSettingSeekBarPreference
+            android:key="notification_material_dismiss_style"
+            android:title="@string/clearall_style_title"
+            android:dependency="notification_material_dismiss"
+            android:defaultValue="0"
+            android:max="9"
+            settings:min="0" />
+
+    <com.octavi.lab.preferences.SystemSettingSeekBarPreference
+            android:key="notification_material_dismiss_bgstyle"
+            android:title="@string/clearall_bgstyle_title"
+            android:dependency="notification_material_dismiss"
+            android:defaultValue="0"
+            android:max="4"   
+            settings:min="0" />
+
     <com.octavi.lab.preferences.SecureSettingSwitchPreference
             android:key="show_media_squiggle_animation"
             android:title="@string/show_squiggle_animation_title"
