--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -19,7 +19,6 @@
     <string name="button_category">Buttons</string>
     <string name="system_category">System</string>
     <string name="notifications_category">Notifications</string>
-    <string name="lockscreen_fod_category">Fingerprint On Display</string>
     <string name="ambient_settings_category">Ambient Settings</string>
     <string name="lock_screen_elements_category">Lock screen elements</string>
     <string name="misc_apps_category">Apps</string>
@@ -506,16 +505,18 @@
     <string name="max_visible_notification_icons_title">Notification icons</string>
     <string name="max_visible_notification_icons_summary">Max. notification icons visible on statusbar</string>
 
-    <!-- UDFPS Recog Animation -->
-    <string name="udfps_customization">UDFPS customization</string>
+    <!-- UDFPS Settings -->
+    <string name="enable">Enable</string>
+    <string name="udfps_category">UDFPS</string>
+    <string name="udfps_settings_title">UDFPS customization</string>
+    <string name="udfps_settings_summary">Customize under-display fingerprint scanner</string>
     <string name="udfps_recog_animation">UDFPS animation</string>
     <string name="udfps_recog_animation_summary">Shows an animation while reading your finger</string>
     <string name="udfps_recog_animation_effect_title">UDFPS custom animation</string>
     <string name="udfps_recog_animation_effect_summary">Choose animation effect</string>
-
-    <!-- UDFPS icon picker -->
     <string name="udfps_icon_picker_title">UDFPS icon picker</string>
     <string name="udfps_icon_picker_summary">Choose your favorite fingerprint icon</string> 
+    <string name="disable">Disable</string>
 
     <!-- Lockscreen bottom shortcuts -->
     <string name="lockscreen_shortcut_category">Bottom shortcuts</string>
