--- a/res/xml/octavi_lab_quicksettings.xml
+++ b/res/xml/octavi_lab_quicksettings.xml
@@ -64,6 +64,26 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+       android:title="@string/qs_battery_category_title" >
+
+        <!-- Battery styles -->
+        <com.octavi.lab.preferences.SystemSettingListPreference
+            android:key="qs_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:entries="@array/qs_battery_style_entries"
+            android:entryValues="@array/qs_battery_style_values"
+            android:defaultValue="-1" />
+
+        <!-- Battery location -->
+        <com.octavi.lab.preferences.SystemSettingListPreference
+            android:key="qs_show_battery_percent"
+            android:title="@string/status_bar_battery_percent_title"
+            android:entries="@array/status_bar_battery_percent_entries"
+            android:entryValues="@array/status_bar_battery_percent_values"
+            android:defaultValue="2" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
        android:title="@string/qs_brightness_category_title" >
 
         <com.octavi.lab.preferences.SecureSettingListPreference
