--- a/res/xml/octavi_lab_gestures.xml
+++ b/res/xml/octavi_lab_gestures.xml
@@ -31,5 +31,10 @@
             android:key="double_tap_sleep_lockscreen"
             android:title="@string/double_tap_sleep_lockscreen_title"
             android:defaultValue="false" />
+
+        <com.octavi.lab.preferences.SystemSettingSwitchPreference
+            android:key="doze_trigger_doubletap"
+            android:title="@string/doze_double_tap_title"
+            android:defaultValue="false" />
     </PreferenceCategory>
 </PreferenceScreen>
