--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -23,6 +23,7 @@
     <string name="octavi_ambient_title">Ambient</string>
     <string name="ambient_settings">Ambient Settings</string>
     <string name="lock_screen_elements_category_title">Lock screen elements</string>
+    <string name="misc_spoof_category">Device spoofing</string>
 
     <string name="statusbar_summary">Clock &amp; date, <b>Traffic Indicator</b>, Battery Styles/n Volte Icons, Notification counts</string>
     <string name="qs_summary">QS Rows &amp; Columns, Data Usage, QS media player, <b>QS Clock styles</b>, Tile titles</string>
@@ -105,5 +106,16 @@
     <!-- Double Tap on Doze to wake -->
     <string name="double_tap_on_doze_to_wake_title">Double-tap to wake on doze</string>
     <string name="double_tap_on_doze_to_wake_summary">Double tap to wake when device is dreaming</string>
+
+    <!-- Netflix Spooft -->
+    <string name="netflix_spoof_title">Netflix spoof</string>
+    <string name="netflix_spoof_summary">Spoof your device as different model for Netflix</string>
+
+    <!-- Unlimited google photos storage -->
+    <string name="use_photos_spoof_title">Unlimited Photos storage</string>
+    <string name="use_photos_spoof_summary">Spoof your device as Pixel XL for Google Photos app only to provide unlimited storage for backup</string>
+    <!-- Unlock FPS for specific games -->
+    <string name="use_games_spoof_title">Unlock higher FPS in games</string>
+    <string name="use_games_spoof_summary">Spoof your device as different model for specific games to unlock higher FPS</string>
 
 </resources>
