--- a/res/values/octavi_strings.xml
+++ b/res/values/octavi_strings.xml
@@ -146,4 +146,10 @@
     <string name="global_actions_emergency">Emergency</string>
     <string name="global_actions_device_controls">Device controls</string>
 
+    <!-- Fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
+    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
+    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
+
 </resources>
